# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
abstract_factory/: abstract_factory.cpp
adapter/: adapter.cpp
bridge/: bridge.cpp
builder/: builder.cpp
factory/: factory.cpp
prototype/: prototype.cpp
singleton/: singleton.cpp
template/: template.cpp
